# viro_cobot

./: .gitignore  README.md  git_workflow.md  host_setup.sh  kill_viro.sh  run_viro.sh
cobot_admittance_control/: CMakeLists.txt  README.md  package.xml
cobot_admittance_control/config/: params.yaml
cobot_admittance_control/launch/: admittance.launch.py
cobot_admittance_control/src/: admittance_node.cpp
cobot_api/: CMakeLists.txt  package.xml
cobot_api/config/: cobot_job_itinerary.yaml  joint_trajectory_positions.yaml  move_group_trajectory.yaml
cobot_api/include/cobot_api/: cobot_group_teleop_api.h
cobot_api/launch/: cobot_api.launch.py  joint_traj_ctrlr_test.launch.py  system.launch.py
cobot_api/scripts/: cobot_gui_client.py  cobot_job_client.py  joint_traj_ctrlr_test.py
cobot_api/scripts/gym_gazebo2/envs/rl_scripts/: mara.py
cobot_api/scripts/gym_gazebo2/utils/: ut_cobot.py  ut_generic.py  ut_launch.py
cobot_api/src/: cobot_group_teleop_api.cpp  move_group_interface_tutorial_cart.cpp  move_group_interface_tutorial_joint.cpp  move_group_service_node.cpp
cobot_common/cobot_eth_test/: Dockerfile  README.md  entrypoint.sh  kill_eth_test.sh  robot_slave_emulator.py  run_eth_test.sh  setup_network.sh  test_soem_driver.py
cobot_common/ethercat_driver_ros2/ethercat_driver/src/: ethercat_driver.cpp
cobot_common/ethercat_driver_ros2/ethercat_interface/: CMakeLists.txt
cobot_common/ethercat_driver_ros2/ethercat_interface/src/: ec_master.cpp
cobot_common/ethercat_driver_ros2/ethercat_manager/: CMakeLists.txt
cobot_common/ethercat_driver_ros2/ethercat_manager/include/ethercat_manager/: ec_master_async.hpp
cobot_common/soem_ethercat_driver/: CMakeLists.txt  TODO  package.xml
cobot_common/soem_ethercat_driver/config/: ethercat_driver_test.yaml
cobot_common/soem_ethercat_driver/include/soem_ethercat_driver/: ethercat_driver.h  ethercat_manager.h  ethercat_module_client.h
cobot_common/soem_ethercat_driver/src/: ethercat_driver.cpp  ethercat_driver_test.cpp  ethercat_manager.cpp  ethercat_module_client.cpp
cobot_common/soem_ros2/: CMakeLists.txt
cobot_common/soem_ros_control/: CMakeLists.txt  package.xml  soem_hardware_interface.xml
cobot_common/soem_ros_control/include/soem_ros_control/: soem_hw_interface.h
cobot_common/soem_ros_control/src/: soem_hardware_interface.cpp
cobot_control_mux/: CMakeLists.txt  README.md  package.xml
cobot_control_mux/launch/: control_mux.launch.py
cobot_control_mux/src/: control_mux_node.cpp  moveit_effort_bridge.cpp
cobot_description/: CMakeLists.txt  package.xml
cobot_description/config/: cobot_controllers.yaml  pseudo_soem_config.yaml  soem_config.yaml  zeroerr_config.yaml
cobot_description/launch/: bringup_robot.launch.py  display_robot.launch.py
cobot_description/meshes/rdr/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
cobot_description/rviz/: display.rviz
cobot_description/urdf/: cobot.xacro  cobot_arm.xacro  cobot_ros2_control.xacro  cobot_transmissions.xacro  gripper.xacro
cobot_description/worlds/: empty.world
cobot_force_estimation/: CMakeLists.txt  README.md  package.xml
cobot_force_estimation/include/cobot_force_estimation/: wrench_estimator.hpp
cobot_force_estimation/launch/: force_estimation.launch.py
cobot_force_estimation/src/: wrench_estimator.cpp  wrench_estimator_node.cpp
cobot_gravity_compensation/: CMakeLists.txt  README.md  package.xml
cobot_gravity_compensation/config/: params.yaml
cobot_gravity_compensation/include/cobot_gravity_compensation/: gravity_comp_node.hpp  gravity_compensator.hpp
cobot_gravity_compensation/launch/: gravity_comp.launch.py
cobot_gravity_compensation/scripts/: friction_identification.py
cobot_gravity_compensation/src/: gravity_comp_node.cpp  gravity_compensator.cpp
cobot_gui/ros2_websocket/: index.html  package-lock.json  ros_demo.js  serve_quiet.py  the_rundown.md
cobot_gui/ros2_websocket/src/: URDFClasses.js  URDFLoader.js  index.js
cobot_gui/ros2_websocket/src/cobot_description/meshes/rdr/: link_6.STL
cobot_gui/ros2_websocket/src/cobot_description/urdf/: cobot_arm.urdf
cobot_hardware/: CMakeLists.txt  cobot_hardware_interface_plugin.xml  package.xml
cobot_hardware/include/cobot_hardware/: viro_comm.hpp  viro_hardware.hpp  visibility_control.h
cobot_hardware/scripts/: viro_emulator.py
cobot_hardware/src/: viro_hardware.cpp
cobot_impedance_control/: CMakeLists.txt  README.md  package.xml
cobot_impedance_control/config/: params.yaml
cobot_impedance_control/include/cobot_impedance_control/: impedance_controller.hpp
cobot_impedance_control/launch/: impedance.launch.py
cobot_impedance_control/src/: impedance_controller.cpp  impedance_node.cpp
cobot_moveit_config/: CMakeLists.txt  README.md  package.xml
cobot_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
cobot_moveit_config/launch/: start_controller.launch.py  start_moveit.launch.py
cobot_moveit_config/rviz/: moveit.rviz
cobot_moveit_config/srdf/: cobot.srdf
cobot_msgs/: CMakeLists.txt  package.xml
cobot_msgs/msg/: RobotState.msg
cobot_msgs/srv/: CtrlParam.srv  TaskParams.srv  TaskParamsinv.srv
cobot_scan_n_plan/: README.md  package.xml  setup.cfg  setup.py
cobot_scan_n_plan/cobot_scan_n_plan/: surface_plan.py  surface_scan.py  surface_traj.py
cobot_scan_n_plan/config/: scan_n_plan_path.csv  scan_n_plan_path.yaml
cobot_scan_n_plan/launch/: plan.launch.py  scan.launch.py
cobot_scan_n_plan/scripts/: rs_point_cloud.py  surface_plan_node.py  surface_scan_node.py  surface_traj_node.py
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
